# My-mp3

./: .gitignore  README.md  make_app.sh  make_music_viewer_exec.sh  music-player.db  music-viewr.desktop  pyproject.toml  requirements.txt  test_app.sh  to_install_locally.sh
app/: main.py  music_viewer.py  music_viewer_new.py  resources.py  settings.py  tests.py
app/music_player/: music_palyer.py
app/ui/: ui.py
app/utils/: __init__.py  queries.py
init_db/: import_playlists.py  import_songs.py
